K8s/nats-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2.7.0-alpine



---

kind: Service
apiVersion: v1
metadata:
  name: nats-service
spec:
  selector:
    app: nats
  ports:
  - protocol : TCP
    port: 4222
    targetPort: 4222
